# Enable testing for ctest
ENABLE_TESTING()

SET(V_CPP_UTILS_UNIT_TESTS_EXE "unit_tests")
FILE(GLOB V_CPP_UTILS_UNIT_TESTS "${V_CPP_UTILS_TST_DIR}/*.cpp")

# Compile unit tests
ADD_EXECUTABLE("${V_CPP_UTILS_UNIT_TESTS_EXE}" "${V_CPP_UTILS_UNIT_TESTS}")
ADD_TEST("${V_CPP_UTILS_UNIT_TESTS_EXE}" "${V_CPP_UTILS_UNIT_TESTS_EXE}")
